--- a/styles.css
+++ b/styles.css
@@ -12,20 +12,21 @@ label {
     font-style: normal;
 }
 
-#editableTable>thead>tr>th,
-#editableTable>tbody>tr>td {
+thead>tr>th,
+tbody>tr>td {
     border: 1px solid black;
     padding: 6px;
     text-align: left;
-    color: #c267ff;
-    background-color: rgb(65, 64, 64);
+    color: #141414;
+    background-color: #a367ca;
     font-family: "Poppins", sans-serif;
     font-weight: 500;
     font-style: normal;
 }
 
-#editableTable>thead>tr>th {
+thead>tr>th {
     background-color: #1d1d1d;
+    color: #c267ff;
 }
 
 .timerInput {
@@ -50,6 +51,13 @@ label {
 
 .varBtn {
     margin-left: 2%;
+    border-radius: 8px;
+    color: #43275a;
+    background-color: #8f56fa;
+    border: 2px solid #111 ;
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    font-style: normal;
 }
 
 .timerBtn {
@@ -73,24 +81,36 @@ label {
     padding-right: 15px;
 }
 
+.expandBtn {
+    float: right;
+    background-color:#44b7ff;
+    font-size: 120%;
+    margin-left: 16px;
+    width: 27px;
+}
+
 #calendar {
-    border-spacing: 0px;
-    border-collapse: collapse;
-    padding: 0;
+    text-align: center;
+    overflow: auto;
+    margin: 0 auto;
+    display: flex;
+    justify-content:center;
+    margin-top: 60px;
 }
 
 .sidebar {
-    height: 100%;
-    width: 0;
+    height: 0;
+    width: 100%;
     position: fixed;
-    top: 0;
-    right: 0;
+    bottom: 0;
     background-color: #111;
     word-wrap: break-word;
     transition: 0.5s;
     padding-top: 60px;
+    text-align: center;
     z-index: 999;
     padding-left: 25px;
+    right: -15px;
 }
 
 .sidebar a {
@@ -101,6 +121,32 @@ label {
     background-color: #111;
     display: block;
     transition: 0.5s;
+}
+
+.sidebar a:hover {
+    color: #f1f1f1;
+}
+
+.sidebar .closebtn {
+    position: absolute;
+    bottom: 40px;
+    font-size: 36px;
+    width: 34px;
+    word-wrap: normal;
+    border-radius: 10px;
+}
+
+.openbtn:hover {
+    background-color: #444;
+}
+
+@media screen and (max-height: 450px) {
+    .sidebar {
+        padding-top: 15px;
+    }
+    .sidebar a {
+        font-size: 18px;
+    }
 }
 
 .poppins {
@@ -159,34 +205,19 @@ label {
     width: 15%;
 }
 
-.sidebar a:hover {
-    color: #f1f1f1;
+.customSpace{
+    color:black;
+    min-width: 50px;
+    background-color: #c267ff;
+    padding: 10px 10px;
+    margin-left: 2%;
 }
 
-.sidebar .closebtn {
-    position: absolute;
-    top: 0px;
-    margin-top: 20px;
-    right: -35px;
-    font-size: 36px;
-    padding-right: 30px;
-    margin-right: 50px;
-    width: 24px;
-    word-wrap: normal;
-    border-radius: 10px;
-}
-
-.openbtn:hover {
-    background-color: #444;
-}
-
-@media screen and (max-height: 450px) {
-    .sidebar {
-        padding-top: 15px;
-    }
-    .sidebar a {
-        font-size: 18px;
-    }
+textarea {
+    min-width:50px;
+    min-height: 40px;
+    background-color: #44b7ff;
+    margin-top: 12px;
 }
 
 table {
@@ -222,27 +253,12 @@ table {
     background-color: #d885ff;
 }
 
-.calendarItem {
-    border: 1px solid black;
-    padding: 0px;
-    text-align: left;
-    width: 100px;
-    height: 100px;
-    vertical-align: top;
-    background-color: #525252;
-    text-align: left;
-    vertical-align: top;
-    padding: 10px 10px;
-    color: #e09eff;
+.goblinList {
+    list-style-type: "- ";
+    text-decoration: none;
 }
 
-th.calendarItem {
-    text-align: center;
-    background-color: #1d1d1d;
-    color: #d885ff;
-}
-
-.calendarItem .editable-bar {
-    height: 20px;
-    width: 100%;
+.goblinListST {
+    list-style-type: "- ";
+    text-decoration: line-through;
 }
